# bids-pre-curate

./: .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  bids_pre_curate.py  manifest.json  pyproject.toml  requirements.txt  run.py  setup.py
.github/: release-drafter.yml
scripts/: save_bids_curation.ipynb  save_bids_curation.py
tests/: __init__.py  generate_data.py
tests/assets/: __init__.py  acquisition_labels_atbs.csv  config-stage1.json  config-stage2.json  data2csv_normal_data.csv  proj_data.json  proj_data.py  session_labels_atbs.csv  subject_codes_atbs.csv
tests/assets/nate/: acquisition_labels_Nate.csv
tests/assets/project/: acquisition_labels_Nate-BIDS-pre-curate.csv  session_labels_Nate-BIDS-pre-curate.csv  subject_codes_Nate-BIDS-pre-curate.csv
tests/assets/project/correct/nate/: session_labels_Nate.csv  subject_codes_Nate.csv
tests/assets/project/correct/nate-bids/: acquisition_labels_Nate-BIDS-test.csv  session_labels_Nate-BIDS-test.csv  subject_codes_Nate-BIDS-test.csv
tests/assets/project_renamed/: acquisition_labels_Nate-BIDS-pre-curate.csv  session_labels_Nate-BIDS-pre-curate.csv  subject_codes_Nate-BIDS-pre-curate.csv
tests/integration_tests/: Dockerfile  delete_project.py  manifest.json  populate_csv.py  requirements.txt  test.sh  test_run.py
tests/unit_tests/: test_bids_curate.py  test_bids_pre_curate.py
utils/: bids_pre_curate.py  deep_dict.py  delete_empty.py  infer_bids.py  subj_to_sess.py
utils/bids/: run_level.py
utils/fly/: make_file_name_safe.py
