[tool.poetry]
name = "bids-pre-curate"
version = "0.2.1"
description = "Prepare project for BIDS Curation. BIDS Pre-Curate offers a simple way to modify labels and classifications of project data to be compatible with the BIDS-spec. Running pre-curate on a given project (as a project-level analysis) will generate CSV files that will be populated with a unique list of container labels, as well as slots for the information needed for BIDS curation (classification, task, etc.). These CSV files can be downloaded and modified (outside of Flywheel) to provide missing or corrected information. The completed CSV file is then uploaded to the project (as an attachment) and provided as input to a run of this same gear to do on-the-fly mappings and metadata updates. For more information, please see the readme in the source repository."
authors = ["Flywheel"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "19.3.0"
certifi = "2020.6.20"
chardet = "3.0.4"
flywheel-bids = "^1.0.4"
flywheel-sdk = "^14.0.0"
future = "0.18.2"
idna = "2.9"
jsonschema = "3.2.0"
numpy = "1.19.1"
pandas = "1.0.5"
pyrsistent = "0.16.0"
python-dateutil = "2.8.1"
pytz = "2020.1"
requests = "^2.27.1"
requests-toolbelt = "0.9.1"
six = "1.15.0"
urllib3 = "^1.26.8"
zipp = "3.1.0"
flywheel-gear-toolkit = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
